<resources>
    <string name="app_name">PocketFinances</string>
    <string name="pocket_finances">POCKET FINANCES</string>
    <string name="font_walkway_black">fonts/Walkway_Black.ttf</string>
    <string name="add_new_account_contentdescription">Add New Account</string>
    <string name="edit_accounts_contentdescription">Edit Accounts</string>
    <string name="fragment_accounts_title_text">Accounts</string>
    <string name="add_new_expense_contentdescription">Add New Expense</string>
    <string name="continue_text">Continue</string>
    <string name="finish_text">Finish</string>
    <string name="skip_text">Skip</string>
    <string name="fingerprint_icon_description">Scan Fingerprint</string>
    <string name="bottom_nav_item_title_home">Home</string>
    <string name="bottom_nav_item_title_accounts">Accounts</string>
    <string name="bottom_nav_item_title_recurrences">Recurrences</string>
    <string name="bottom_nav_item_title_budget">Budget</string>
    <string name="fingerprintauth_message_default">Place finger on sensor.</string>
    <string name="notification_duedate_builder">Due %s, %s</string>
    <string name="fragment_welcome_4_security_text">Next, you can choose a 4-digit PIN to protect your finance data. If enabled, you will be prompted to enter your PIN whenever you launch the app. This feature is not required but is highly recommended for your security.</string>
    <string name="fragment_welcome_5_done_text">You\'re all set! Enjoy using the app, and if you have any questions, feel free to check the FAQ\'s in the preferences page.</string>
    <string name="fingerprint_fragment_add_text">By enabling fingerprint authentication, any fingerprint that is enrolled in the device will be able to unlock and open the app.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="background">Background</string>

    <string name="about_settings">About</string>
    <string name="change_background">Change Background</string>
    <string name="notifications">Notifications</string>
    <string name="fingerprintScanner">Fingerprint</string>
    <string name="change_password">Password</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
