<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/bottom_nav_item_title_home"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/nav_accounts"
        android:icon="@drawable/ic_nav_bank"
        android:title="@string/bottom_nav_item_title_accounts"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/nav_recurringexpenses"
        android:icon="@drawable/ic_nav_refresh"
        android:title="@string/bottom_nav_item_title_recurrences"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/nav_budget"
        android:icon="@drawable/ic_nav_chart"
        android:title="@string/bottom_nav_item_title_budget"
        app:showAsAction="ifRoom"/>

</menu>