<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/fragment_accounts_topbar_layout"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorDarkGreyTransparent">

        <TextView
            android:id="@+id/fragment_accounts_title_textview"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/fragment_accounts_title_text"
            android:textSize="26sp"
            android:textColor="@color/colorWhite"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <ImageButton
            android:id="@+id/fragment_accounts_add_btn"
            android:src="@mipmap/ic_add_48"
            android:background="@android:color/transparent"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/add_new_account_contentdescription" />

        <ImageButton
            android:id="@+id/fragment_accounts_edit_btn"
            android:src="@mipmap/ic_pencil_48"
            android:background="@android:color/transparent"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@id/fragment_accounts_add_btn"
            android:contentDescription="@string/edit_accounts_contentdescription" />

    </android.support.constraint.ConstraintLayout>

    <ListView
        android:id="@+id/fragment_accounts_listview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/fragment_accounts_topbar_layout"
        app:layout_constraintBottom_toBottomOf="parent">

        <!-- Add list elements here -->

    </ListView>

</android.support.constraint.ConstraintLayout>